--- a/package.json
+++ b/package.json
@@ -42,6 +42,8 @@
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
     "morgan": "^1.10.0",
+    "mysql2": "^3.6.5",
+    "sequelize": "^6.35.1",
     "typescript": "^5.1.3"
   },
   "devDependencies": {
