--- a/package.json
+++ b/package.json
@@ -29,15 +29,19 @@
   },
   "dependencies": {
     "@amaui/api": "^1.0.38",
+    "@amaui/aws": "^1.1.15",
     "@amaui/date": "^1.1.8",
     "@amaui/errors": "^1.0.111",
     "@amaui/models": "^1.1.18",
+    "@amaui/node": "^1.0.11117",
     "@amaui/utils": "^1.1.17",
+    "@aws-sdk/client-s3": "^3.468.0",
     "compression": "^1.7.4",
     "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^16.1.4",
     "express": "^4.18.2",
+    "formidable": "^3.5.1",
     "helmet": "^7.1.0",
     "jsonwebtoken": "^9.0.0",
     "method-override": "^3.0.0",
@@ -51,6 +55,7 @@
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
     "@types/express": "^4.17.17",
+    "@types/formidable": "^3.4.5",
     "@types/jsonwebtoken": "^9.0.2",
     "@types/method-override": "^0.0.32",
     "@types/morgan": "^1.9.4",
