--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "@company/mini-api",
   "version": "1.0.0",
   "description": "Interview company mini API",
-  "main": "index.js",
+  "main": "./src/index.ts",
   "repository": {
     "type": "git",
     "url": "git+https://github.com/lazar-eric/interview-company-api.git"
@@ -51,6 +51,7 @@
     "typescript": "^5.1.3"
   },
   "devDependencies": {
+    "@amaui/test": "^1.1.2",
     "@types/compression": "^1.7.2",
     "@types/cors": "^2.8.13",
     "@types/dotenv": "^8.2.0",
@@ -64,5 +65,10 @@
     "nodemon": "^2.0.22",
     "rimraf": "^5.0.1",
     "ts-node": "^10.9.1"
+  },
+  "sideEffects": false,
+  "engines": {
+    "node": ">=12.0.0",
+    "yarn": ">=1.22"
   }
 }
